{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 12,
  "lineage": "33238443-8f76-0d45-e1ee-81cfc547a11f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tapash-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:509399262169:internet-gateway/igw-0ecd71b5f6ac40cfb",
            "id": "igw-0ecd71b5f6ac40cfb",
            "owner_id": "509399262169",
            "region": "ap-south-1",
            "tags": {
              "Name": "tapash-igw"
            },
            "tags_all": {
              "Name": "tapash-igw"
            },
            "vpc_id": "vpc-065a1a32df67cd613"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.tapash-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tapash-private-route-table-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:509399262169:route-table/rtb-049598fcac7588428",
            "id": "rtb-049598fcac7588428",
            "owner_id": "509399262169",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Name": "tapash-private-route-table-1"
            },
            "tags_all": {
              "Name": "tapash-private-route-table-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-065a1a32df67cd613"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.tapash-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tapash-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:509399262169:route-table/rtb-099109e08c7910690",
            "id": "rtb-099109e08c7910690",
            "owner_id": "509399262169",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ecd71b5f6ac40cfb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tapash-public-route-table"
            },
            "tags_all": {
              "Name": "tapash-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-065a1a32df67cd613"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.tapash-igw",
            "aws_vpc.tapash-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tapash-public-route-table-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:509399262169:route-table/rtb-01bdc8afc834d24eb",
            "id": "rtb-01bdc8afc834d24eb",
            "owner_id": "509399262169",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ecd71b5f6ac40cfb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tapash-public-route-table-2"
            },
            "tags_all": {
              "Name": "tapash-public-route-table-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-065a1a32df67cd613"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.tapash-igw",
            "aws_vpc.tapash-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tapash-private-subnet-1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f64e578a4a66528",
            "region": "ap-south-1",
            "route_table_id": "rtb-049598fcac7588428",
            "subnet_id": "subnet-06c34be34d69071e4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.tapash-private-route-table-1",
            "aws_subnet.tapash-private-subnet-1",
            "aws_vpc.tapash-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tapash-public-subnet-2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019694abd98537d2f",
            "region": "ap-south-1",
            "route_table_id": "rtb-01bdc8afc834d24eb",
            "subnet_id": "subnet-056ac362b5211bb05"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.tapash-igw",
            "aws_route_table.tapash-public-route-table-2",
            "aws_subnet.tapash-public-subnet-2",
            "aws_vpc.tapash-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tapash-public-subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099d993bb44733ed6",
            "region": "ap-south-1",
            "route_table_id": "rtb-099109e08c7910690",
            "subnet_id": "subnet-051871acb1d2e3d24"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.tapash-igw",
            "aws_route_table.tapash-public-route-table",
            "aws_subnet.tapash-public-subnet-1",
            "aws_vpc.tapash-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tapash-private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:509399262169:subnet/subnet-06c34be34d69071e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c34be34d69071e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "509399262169",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "tapash-private-subnet-1"
            },
            "tags_all": {
              "Name": "tapash-private-subnet-1"
            },
            "vpc_id": "vpc-065a1a32df67cd613"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.tapash-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tapash-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:509399262169:subnet/subnet-051871acb1d2e3d24",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051871acb1d2e3d24",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "509399262169",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "tapash-public-subnet-1"
            },
            "tags_all": {
              "Name": "tapash-public-subnet-1"
            },
            "vpc_id": "vpc-065a1a32df67cd613"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.tapash-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tapash-public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:509399262169:subnet/subnet-056ac362b5211bb05",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056ac362b5211bb05",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "509399262169",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "tapash-public-subnet-2"
            },
            "tags_all": {
              "Name": "tapash-public-subnet-2"
            },
            "vpc_id": "vpc-065a1a32df67cd613"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.tapash-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tapash-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:509399262169:vpc/vpc-065a1a32df67cd613",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03408603d4e6a6c41",
            "default_route_table_id": "rtb-02973aebf2178fff1",
            "default_security_group_id": "sg-048090d2378667fe0",
            "dhcp_options_id": "dopt-0abd23fa19b158402",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-065a1a32df67cd613",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02973aebf2178fff1",
            "owner_id": "509399262169",
            "region": "ap-south-1",
            "tags": {
              "Name": "tapash-vpc-1234567890"
            },
            "tags_all": {
              "Name": "tapash-vpc-1234567890"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}